# claude-tier-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: benchmark.md
examples/: basic.py
scripts/: benchmark_tasks.py  run_benchmark.py
src/tier_router/: __init__.py  logger.py  router.py
tests/: test_router.py
